--- a/templates/records.html
+++ b/templates/records.html
@@ -18,6 +18,7 @@
             <th scope="col">Text</th>
             <th scope="col">Model</th>
             <th scope="col">Emotion</th>
+            <th scope="col">Delete Record</th>
           </tr>
         </thead>
         <tbody>
@@ -27,6 +28,10 @@
                 <td>{{ item['text'] }}</td>
                 <td>{{ item['model'] }}</td>
                 <td>{{ item['emotion'] }}</td>
+                <td><form method="post" action="{{ url_for('delete_user', user_id=item['_id']) }}">
+                        <input class="btn btn-danger" type="submit" name="delete" value="Delete">
+                    </form>
+                </td>
               </tr>
             {% endfor %}
         </tbody>
