--- a/templates/records.html
+++ b/templates/records.html
@@ -27,6 +27,7 @@
                 <td>{{ item['text'] }}</td>
                 <td>{{ item['model'] }}</td>
                 <td>{{ item['emotion'] }}</td>
+                <td>{{ item['confidence'] }}</td>
                 <td>
                     <form method="post" action="{{ url_for('delete_user', user_id=item['_id']) }}">
                         <input class="btn btn-danger" type="submit" name="delete" value="Delete">
