--- a/templates/records.html
+++ b/templates/records.html
@@ -18,6 +18,7 @@
             <th scope="col">Text</th>
             <th scope="col">Model</th>
             <th scope="col">Emotion</th>
+            <th scope="col">Confidence</th>
           </tr>
         </thead>
         <tbody>
