--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         <input class="form-control" type="text" name="text" placeholder="Text" style="margin-bottom: 5px;">
         <select class="form-select" aria-label="Default select example" name='model_name'>
             <option selected>LSTM</option>
-            <option value="1">BERT</option>
+            <option value="BERT">BERT</option>
         </select>
         <input class="btn btn-primary" type="submit" value="Make prediction">
     </form>
